--- a/queued/hosting_queued.conf
+++ b/queued/hosting_queued.conf
@@ -1,9 +1,9 @@
-[program:hosting_queue_runner]
+[program:hosting_queued]
 ; Adjust the next line to point to where you copied the script.
-command=/var/aegir/hosting_queue_runner.sh
+command=/var/aegir/hosting_queued.sh
 user=aegir
 numprocs=1
-stdout_logfile=/var/log/hosting_queue_runner
+stdout_logfile=/var/log/hosting_queued
 autostart=TRUE
 autorestart=TRUE
 ; Tweak the next line to match your environment.
