--- a/queued/init.d.example
+++ b/queued/init.d.example
@@ -1,6 +1,6 @@
 #!/bin/sh
 ### BEGIN INIT INFO
-# Provides:          hosting-queue-runner
+# Provides:          hosting-queued
 # Required-Start:    $network $local_fs
 # Required-Stop:
 # Default-Start:     2 3 4 5
@@ -17,8 +17,8 @@
 
 # PATH should only include /usr/* if it runs after the mountnfs.sh script
 PATH=/sbin:/usr/sbin:/bin:/usr/bin
-DESC="Aegir queue runner"  # Introduce a short description here
-NAME="hosting-queue-runner" # Introduce the short server's name here
+DESC="Aegir queue daemon"  # Introduce a short description here
+NAME="hosting-queued" # Introduce the short server's name here
 DAEMON=/usr/bin/drush      # Introduce the server's location here
 DAEMON_ARGS="@hostmaster $NAME" # Arguments to run the daemon with
 USER="aegir"
