run the daemon niced
this is to reduce load when heavy backup or migrate tasks are run by
the queue daemon. the NICE value is customizable in /etc/default/hosting-queued

--- a/queued/init.d.example
+++ b/queued/init.d.example
@@ -24,6 +24,7 @@ DAEMON_ARGS="@hostmaster $NAME" # Arguments to run the daemon with
 USER="aegir"
 PIDFILE=/var/run/$NAME.pid
 SCRIPTNAME=/etc/init.d/$NAME
+NICE=10
 
 # Exit if the package is not installed
 [ -x $DAEMON ] || exit 0
@@ -51,7 +52,7 @@ do_start()
                 --make-pidfile --pidfile $PIDFILE --startas $DAEMON \
                 --test > /dev/null \
 		|| return 1
-	start-stop-daemon --start --quiet -c $USER --background \
+	start-stop-daemon --nice $NICE --start --quiet -c $USER --background \
                 --make-pidfile --pidfile $PIDFILE --startas $DAEMON -- \
 		$DAEMON_ARGS \
 		|| return 2
