--- a/queued/init.d.example
+++ b/queued/init.d.example
@@ -20,7 +20,7 @@ PATH=/sbin:/usr/sbin:/bin:/usr/bin
 DESC="Aegir queue daemon"  # Introduce a short description here
 NAME="hosting-queued" # Introduce the short server's name here
 DAEMON=/usr/local/bin/drush      # Introduce the server's location here
-DAEMON_ARGS="@hostmaster $NAME" # Arguments to run the daemon with
+DAEMON_ARGS="--quiet @hostmaster $NAME" # Arguments to run the daemon with
 USER="aegir"
 PIDFILE=/var/run/$NAME.pid
 SCRIPTNAME=/etc/init.d/$NAME
@@ -42,7 +42,7 @@ NICE=10
 #
 do_start()
 {
-    su - $USER $DAEMON $DAEMON_ARGS &
+    su - $USER -- $DAEMON $DAEMON_ARGS &
     ret=$?
     echo $! > $PIDFILE
     return $ret
