Adding more links.

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,5 +52,7 @@ before_install:
 script:
 
   # Tests are included in the docker-compose.yml file in the tests repo.
-  # See https://github.com/aegir-project/tests/blob/master/travis/docker-compose.yml
+  # See https://github.com/aegir-project/tests/blob/master/travis/docker-compose.yml for the docker setup.
+  # See https://github.com/aegir-project/dockerfiles/blob/master/docker-entrypoint-tests.sh for the script that runs the tests.
+  # See https://github.com/aegir-project/tests for the behat tests.
   - sudo docker-compose run hostmaster --rm
