--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,14 @@ before_install:
   # Show travis build dir variable.
   - echo $TRAVIS_BUILD_DIR
 
-  # Get test scripts
-  - git clone http://github.com/aegir-project/tests.git
-  - cd tests/travis
-
   # Get Hostmaster
   - git clone http://git.drupal.org/project/hostmaster.git /home/travis/build/aegir-project/hostmaster
   - cd /home/travis/build/aegir-project/hostmaster
   - git checkout $AEGIR_HOSTMASTER_VERSION
+
+  # Get test scripts
+  - git clone http://github.com/aegir-project/tests.git /home/travis/build/aegir-project/tests
+  - cd /home/travis/build/aegir-project/tests
 
   # list docker-engine versions
   - apt-cache madison docker-engine
