--- a/.travis.yml
+++ b/.travis.yml
@@ -47,4 +47,4 @@ script:
   # See https://github.com/aegir-project/tests/blob/master/travis/docker-compose.yml for the docker setup.
   # See https://github.com/aegir-project/dockerfiles/blob/master/docker-entrypoint-tests.sh for the script that runs the tests.
   # See https://github.com/aegir-project/tests for the behat tests.
-  - sudo docker-compose -f docker-compose-provision.yml run hostmaster --rm
+  - sudo docker-compose -f docker-compose-hosting.yml run hostmaster --rm
