--- a/.travis.yml
+++ b/.travis.yml
@@ -39,13 +39,10 @@ before_install:
   - cd /home/travis/build/aegir-project/provision
   - git checkout $AEGIR_PROVISION_VERSION
 
-  # Run docker prepare script.
+  # Run prepare scripts.
   - cd /home/travis/build/aegir-project/tests/travis
   - sudo bash prepare-docker.sh
-
-  # Get aegir/hostmaster and database images.
-  - sudo docker pull aegir/hostmaster:local
-  - sudo docker pull mariadb
+  - bash prepare-testenv.sh
 
 script:
 
@@ -53,4 +50,4 @@ script:
   # See https://github.com/aegir-project/tests/blob/master/travis/docker-compose.yml for the docker setup.
   # See https://github.com/aegir-project/dockerfiles/blob/master/docker-entrypoint-tests.sh for the script that runs the tests.
   # See https://github.com/aegir-project/tests for the behat tests.
-  - sudo docker-compose -f docker-compose-hosting.yml run hostmaster --rm
+  - sudo docker-compose -f docker-compose-hosting.yml run hostmaster
