Issue #2744039 by tvl: hosting-queued start error

--- a/queued/init.d.example
+++ b/queued/init.d.example
@@ -42,7 +42,7 @@ NICE=10
 #
 do_start()
 {
-    su - $USER -- $DAEMON $DAEMON_ARGS &
+    su - $USER -c "$DAEMON $DAEMON_ARGS" &
     ret=$?
     echo $! > $PIDFILE
     return $ret
